# walls

./: .gitignore  LICENSE  PRD.md  README.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-PRD.md  02-ARCHITECTURE.md  02-ARQUITECTURA.md  03-SERVICES-AND-DEPENDENCIES.md  03-SERVICIOS-Y-DEPENDENCIAS.md  04-IMPLEMENTACION.md  04-IMPLEMENTATION.md  05-AUDIT-AND-IMPROVEMENTS.md  05-AUDITORIA-Y-MEJORAS.md  06-TESTING-AND-OPERATIONS.md  06-TESTING-Y-OPERACION.md  07-ESTRUCTURA-DEL-PROYECTO.md  07-PROJECT-STRUCTURE.md  08-DISENO-UI.md  08-UI-DESIGN.md  09-ROADMAP.md  10-ACTUALIZACION-STACK-2026-03-24.md  11-DEUDA-TECNICA.md  11-TECHNICAL-DEBT.md  INDEX.md
src/: App.tsx  app.js  identify.html  identify.ts  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  profiles.rs  wallpaper.rs
src/components/: EditorDialog.tsx  MonitorCard.tsx  MonitorLayout.tsx
src/hooks/: useElementSize.ts
src/i18n/: en.ts  es.ts  index.tsx  types.ts
src/lib/: tauri.ts  types.ts  wallpaper.test.ts  wallpaper.ts
src/test/: setup.ts
tmp/: 2026-03-24-puesta-a-punto.md
