[package]
name = "wallpaper-manager"
version = "0.1.0"
edition = "2021"
description = "Multi-Monitor Wallpaper Manager"

[lib]
name = "wallpaper_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
base64 = "0.22"
thiserror = "2"
log = "0.4"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
